@@ -1,5 +1,7 @@
 0.42 2021-03-02
         - Added GitHub based CI for perl.
+        - Added further methods for communicating JSON Files
+          with the server to the APIs (lerepp).
 
 0.41 2021-03-01
         - Introduce CORS headers to the proxy.
